appId: com.yuuka.mobile
---
- launchApp:
    clearState: true
- tapOn:
    text: "Close app"
    optional: true
- extendedWaitUntil:
    visible: "Yuuka"
    timeout: 30000
- tapOn: "Email"
- inputText: "${YUUKA_EMAIL}"
- tapOn: "Password"
- inputText: "${YUUKA_PASSWORD}"
- scrollUntilVisible:
    centerElement: true
    element: "Sign in"
    direction: DOWN
- tapOn: "Sign in"
- extendedWaitUntil:
    visible: "Active"
    timeout: 15000
